# code-sage

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
code_sage/: cli.py
code_sage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: example.py
