[metadata]
name = "code-sage"
version= 0.0.1
author = "dame rajee"
author_email = doss72180@gmail.com
description = "CodeSage is a Python library for reading and analyzing code using advanced language models."
long_description_content_type=text/markdown 
url = 
classifiers = 
            Programming language :: Python :: 3 
            License :: OSI Approved :: MIT License
            Operating System ::  OS Independent 

[options]
packges = find:
python_requires= >= 3.9 
include_package_data = True
